# Snake-Game

./: .gitignore  CMakeLists.txt  Procfile  app.py  configmodule.py  database.py  main.cpp  makefile  requirements.txt  schemas.py  views.py
client/: CMakeLists.txt  Client.cpp  Client.h  connections.h
server/: app.py  database.py  requirements.txt  schemas.py  views.py
src/: CMakeLists.txt  Game.cpp  Game.h  Map.cpp  Map.h  Snake.cpp  Snake.h  StartGame.cpp  StartGame.h  consts.h
tests/: CMakeLists.txt  ClientTest.cpp
